# rinha-2026

./: .gitignore  Cargo.toml  docker-compose.yml  haproxy.cfg  info.json  nginx.conf  tmp.txt
crates/umbral-socket/: Cargo.toml  README.md
crates/umbral-socket/src/stream/: client.rs  mod.rs  protocol.rs  server.rs
docker/: docker-compose.yml  dockerfile  haproxy.cfg
docs/: flow.md  vars.md
scripts/: deploy.sh  issue.sh  references.sh  test.sh
scripts/k6/: main.js
src/: consts.rs  controller.rs  dto.rs  encoding.rs  kdtree.rs  lib.rs  main.rs  memory.rs  morton.rs  parser.rs  response.rs  service.rs
test/: test.js
