[package]
name = "rinha"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
anyhow = "1.0.102"
memmap2 = "0.9.10"
mimalloc = "0.1.50"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["raw_value"] }

[profile.release]
lto = true
panic = "abort"
strip = "symbols"
codegen-units = 1
