[package]
name = "rinha"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
memmap2 = "0.9.10"
mimalloc = "0.1.50"
mio = { version = "1.2.0", features = ["net", "os-poll"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["raw_value"] }
tokio = { version = "1.52.2", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
umbral-socket = { path = "crates/umbral-socket" }

[profile.release]
lto = true
panic = "abort"
strip = "symbols"
codegen-units = 1
